fiz alterações no exercício 022

--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,24 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center ;
             background-repeat: no-repeat;
             background-size:cover;
+            background-attachment: fixed;*/
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
+            
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 2px solid darkblue;
             border-radius: 15px;
+            box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.103);
         }
 
         main h1 {
@@ -31,7 +38,9 @@
 <body>
     <main>
         <h1>Teste de imagem de Fundo</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt aliquid doloremque repudiandae a. Vel laudantium suscipit unde, quidem ducimus nostrum possimus repellat nihil consequuntur error officia in voluptate aspernatur. Magnam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa alias saepe minus odit recusandae! Soluta dignissimos vitae asperiores ab facere. Ab, assumenda nisi praesentium ad illo eaque totam at et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, atque ducimus earum modi accusamus velit quas reprehenderit dicta aliquam odit, culpa similique eaque aliquid! Repudiandae reiciendis quisquam accusantium illum ab.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt aliquid doloremque repudiandae a. Vel laudantium suscipit unde, quidem ducimus nostrum possimus repellat nihil consequuntur error officia in voluptate aspernatur. Magnam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa alias saepe minus odit recusandae! Soluta dignissimos vitae asperiores ab facere. Ab, assumenda nisi praesentium ad illo eaque totam at et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, atque ducimus earum modi accusamus velit quas reprehenderit dicta aliquam odit, culpa similique eaque aliquid! Repudiandae reiciendis quisquam accusantium illum ab. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis corrupti sed labore facere inventore dolore consectetur repudiandae eveniet, itaque ad quo illo nemo numquam aliquid placeat nostrum cum? Alias, minus? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci nesciunt, exercitationem quisquam impedit dolor doloremque expedita error ut iusto mollitia velit dolores harum. Minima, sed! Ut praesentium libero iure veritatis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi velit repellendus provident recusandae praesentium vel cumque est, consequatur repudiandae accusantium animi doloribus quis esse deserunt itaque aut, exercitationem, sunt fugiat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore excepturi voluptate magni rerum quisquam commodi atque quasi eligendi consequatur accusamus, asperiores saepe culpa sapiente animi fugit, dolorum ab. Asperiores, quos? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae ex molestias ut, commodi dicta quaerat laudantium consequatur cupiditate, distinctio sapiente delectus at sunt ipsam, nihil necessitatibus qui dolorem! Ex, quidem! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut nam aut nesciunt autem voluptas exercitationem necessitatibus iure voluptate recusandae, ipsa ea nisi dolore odio quos, eaque impedit tempore inventore deleniti! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta quae expedita distinctio sit quasi similique necessitatibus libero vel reprehenderit ad quo, amet quidem dolores culpa quaerat, aperiam obcaecati a labore?
+
+        </p>
     </main>
 </body>
 </html>
