adicionei duas exercicios

--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td,th {
@@ -30,6 +31,16 @@
         thead, tfoot{
             background-color: gray;  
         }
+
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
+        }
+
+       tbody > tr:nth-child(odd){
+        background-color: lightgray;
+       }
 
         td.num {
             text-align: right;
@@ -163,5 +174,10 @@
             </tr>
         </tfoot>
     </table>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam aliquid quibusdam fugit laborum illo amet asperiores eveniet velit temporibus voluptatem tempore ratione tempora laboriosam, magnam beatae obcaecati voluptates a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque dolore provident aspernatur doloremque tempore aperiam fugiat doloribus animi molestiae? Rem, itaque id cumque cupiditate in enim culpa neque repellat ab. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa beatae sunt, exercitationem quidem eligendi eveniet, error explicabo fuga optio eius necessitatibus provident omnis minima neque aperiam itaque modi voluptatibus nihil? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas hic id doloribus quis officiis, nesciunt quisquam deserunt temporibus delectus ut maxime optio, esse consectetur exercitationem doloremque dolorum dicta, sit facilis.</p>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam aliquid quibusdam fugit laborum illo amet asperiores eveniet velit temporibus voluptatem tempore ratione tempora laboriosam, magnam beatae obcaecati voluptates a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque dolore provident aspernatur doloremque tempore aperiam fugiat doloribus animi molestiae? Rem, itaque id cumque cupiditate in enim culpa neque repellat ab. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa beatae sunt, exercitationem quidem eligendi eveniet, error explicabo fuga optio eius necessitatibus provident omnis minima neque aperiam itaque modi voluptatibus nihil? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas hic id doloribus quis officiis, nesciunt quisquam deserunt temporibus delectus ut maxime optio, esse consectetur exercitationem doloremque dolorum dicta, sit facilis.</p>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam aliquid quibusdam fugit laborum illo amet asperiores eveniet velit temporibus voluptatem tempore ratione tempora laboriosam, magnam beatae obcaecati voluptates a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque dolore provident aspernatur doloremque tempore aperiam fugiat doloribus animi molestiae? Rem, itaque id cumque cupiditate in enim culpa neque repellat ab. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa beatae sunt, exercitationem quidem eligendi eveniet, error explicabo fuga optio eius necessitatibus provident omnis minima neque aperiam itaque modi voluptatibus nihil? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas hic id doloribus quis officiis, nesciunt quisquam deserunt temporibus delectus ut maxime optio, esse consectetur exercitationem doloremque dolorum dicta, sit facilis.</p>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam aliquid quibusdam fugit laborum illo amet asperiores eveniet velit temporibus voluptatem tempore ratione tempora laboriosam, magnam beatae obcaecati voluptates a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque dolore provident aspernatur doloremque tempore aperiam fugiat doloribus animi molestiae? Rem, itaque id cumque cupiditate in enim culpa neque repellat ab. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa beatae sunt, exercitationem quidem eligendi eveniet, error explicabo fuga optio eius necessitatibus provident omnis minima neque aperiam itaque modi voluptatibus nihil? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas hic id doloribus quis officiis, nesciunt quisquam deserunt temporibus delectus ut maxime optio, esse consectetur exercitationem doloremque dolorum dicta, sit facilis.</p>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam aliquid quibusdam fugit laborum illo amet asperiores eveniet velit temporibus voluptatem tempore ratione tempora laboriosam, magnam beatae obcaecati voluptates a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque dolore provident aspernatur doloremque tempore aperiam fugiat doloribus animi molestiae? Rem, itaque id cumque cupiditate in enim culpa neque repellat ab. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa beatae sunt, exercitationem quidem eligendi eveniet, error explicabo fuga optio eius necessitatibus provident omnis minima neque aperiam itaque modi voluptatibus nihil? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas hic id doloribus quis officiis, nesciunt quisquam deserunt temporibus delectus ut maxime optio, esse consectetur exercitationem doloremque dolorum dicta, sit facilis.</p>
 </body>
 </html>
